--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "this is an api for an app of todos",
   "main": "index.js",
   "scripts": {
+    "start": "node server/server.js",
     "test": "mocha server/**/*.test.js",
     "test-watch": "nodemon --exec \"npm test\""
+  },
+  "engines":{
+    "node": "8.1.0"
   },
   "author": "Gustavo Adolfo Olmedo",
   "license": "ISC",
